# JPMC_LAB

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  QUICKSTART.md  README.md  ansible.cfg  mkdocs.yml  pyproject.toml
.avd/: collection-requirements-4.10.0.yml  collection-requirements-4.6.0.yml  collection-requirements-4.7.0.yml  collection-requirements-4.7.1.yml  collection-requirements-4.8.0.yml  collection-requirements-4.9.0.yml  collection-requirements-devel.yml  requirements-4.10.0.txt  requirements-4.6.0.txt  requirements-4.7.0.txt  requirements-4.7.1.txt  requirements-4.8.0.txt  requirements-4.9.0.txt  requirements-devel.txt
inventory/: inventory.yml  inventory_original.yml
inventory/group_vars/: CAMPUS_ASIA.yml  CVP.yml  LAB.yml  LAB_ENDPOINTS.yml  LAB_WC_07_CONNECTED_ENDPOINTS.yml  LAB_WC_GF_CONNECTED_ENDPOINTS.yml  MANILA.yml  MANILA_BORDER_LEAF.yml  MANILA_ENDPOINTS.yml  MANILA_LEAFS.yml  MANILA_SPINES.yml  MANILA_SRV_LEAFS.yml  MANILA_WC_07_CONNECTED_ENDPOINTS.yml  MANILA_WC_08_CONNECTED_ENDPOINTS.yml  MANILA_WC_09_CONNECTED_ENDPOINTS.yml  MANILA_WC_10_CONNECTED_ENDPOINTS.yml  MANILA_WC_11_CONNECTED_ENDPOINTS.yml  MANILA_WC_12_CONNECTED_ENDPOINTS.yml  MANILA_WC_14_CONNECTED_ENDPOINTS.yml  MANILA_WC_15_CONNECTED_ENDPOINTS.yml  MANILA_WC_16_CONNECTED_ENDPOINTS.yml  MANILA_WC_17_CONNECTED_ENDPOINTS.yml  MANILA_WC_18_CONNECTED_ENDPOINTS.yml  MANILA_WC_19_CONNECTED_ENDPOINTS.yml  MANILA_WC_20_CONNECTED_ENDPOINTS.yml  (+2 more)
playbooks/: fabric-deploy.yml  ztp-configuration.yml
ps_sku_l3ls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+315 files in other folders)
